fixed scaling for portfolio item on mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -618,10 +618,10 @@ header {
 }
 
 .portfolio-item-individual img {
-    /* display: block; */
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    display: block;
+    /* display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
     margin: auto;
-    max-width: 500px;
     padding: 1em;
+    max-width: 75%;
 }
